fixed image not showing up

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -181,8 +181,7 @@ form p {
     text-align: left;
     font-weight: 600;
     color: #fff;
-    margin-left: 10px;
-    width: 100%;
+    margin-bottom: 2px;
 }
 
 .fa-image {
